<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.muvkin.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_trainFragment"
            app:destination="@id/trainFragment" />
    </fragment>
    <fragment
        android:id="@+id/funFragment"
        android:name="com.example.muvkin.FunFragment"
        android:label="@string/fun"
        tools:layout="@layout/fragment_fun" />
    <fragment
        android:id="@+id/orderFragment"
        android:name="com.example.muvkin.OrderFragment"
        android:label="@string/order"
        tools:layout="@layout/fragment_order" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.muvkin.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/bookFragment"
        android:name="com.example.muvkin.BookFragment"
        android:label="fragment_book"
        tools:layout="@layout/fragment_book" />
    <fragment
        android:id="@+id/trainFragment"
        android:name="com.example.muvkin.TrainFragment"
        android:label="Train Details"
        tools:layout="@layout/fragment_train">
        <action
            android:id="@+id/action_trainFragment_to_bookFragment"
            app:destination="@id/bookFragment" />
    </fragment>
</navigation>